Fix for notebook

--- a/remove_starfield_demo.ipynb
+++ b/remove_starfield_demo.ipynb
@@ -176,10 +176,10 @@
     "\n",
     "            # Detect any mostly-NaN rows or columns and mask them completely\n",
     "            # (This occurs in some encounters with NaN blocks at top or bottom)\n",
-    "            for j in range(img.shape[0]):\n",
+    "            for j in range(image_holder.image.shape[0]):\n",
     "                if np.sum(mask[j]) / mask[j].size > .8:\n",
     "                    mask[j] = 1\n",
-    "            for j in range(img.shape[1]):\n",
+    "            for j in range(image_holder.image.shape[1]):\n",
     "                if np.sum(mask[:, j]) / mask[:, j].size > .8:\n",
     "                    mask[:, j] = 1\n",
     "\n",
