Update demo notebook

--- a/remove_starfield_demo.ipynb
+++ b/remove_starfield_demo.ipynb
@@ -141,21 +141,21 @@
     "        return holder\n",
     "        \n",
     "    def preprocess_image(self, image_holder):\n",
+    "        image = image_holder.image\n",
     "        # Undo the L3s' normalization for s/c distance\n",
     "        # (Already done in pre-filter stage, but needed for the\n",
     "        # more pristine images from which we'll subtract the starfield)\n",
     "        if self.denormalize_input:\n",
-    "            denormalize_l3(image_holder.image, image_holder.hdr)\n",
+    "            denormalize_l3(image, image_holder.hdr)\n",
     "\n",
     "        # Apply a PSF correction\n",
     "        corrector = array_corrector_i if self.IO == 'I' else array_corrector_o\n",
     "        # PSF regularization doesn't work with NaNs, but save them for the mask stage later\n",
-    "        nans = np.isnan(image_holder.image)\n",
-    "        np.nan_to_num(image_holder.image, nan=0, copy=False)\n",
-    "        image_holder.image = corrector.correct_image(image_holder.image.astype(float), alpha=ALPHA, epsilon=EPSILON)\n",
+    "        nans = ~np.isfinite(image)\n",
+    "        np.nan_to_num(image, nan=0, posinf=0, neginf=0, copy=False)\n",
+    "        corrected_image = corrector.correct_image(image.astype(float), alpha=ALPHA, epsilon=EPSILON)\n",
     "        \n",
     "        if self.mask:\n",
-    "            image_holder.image[nans] = np.nan\n",
     "            # Load the pre-computed debris-streak mask\n",
     "            E = utils.extract_encounter_number(image_holder.filename)\n",
     "            mask_dir = f'/home/svankooten/psp/WISPR/debris_masks/E{E} masks'\n",
@@ -163,29 +163,68 @@
     "            \n",
     "            mask = fits.getdata(mask).astype(bool)\n",
     "\n",
+    "            mask += nans\n",
+    "\n",
     "            if self.IO == 'I':\n",
     "                # Apply a bad-pixel mask to the inner detector\n",
     "                with np.load('bad_pixel_mask.npz') as bad_pixel_map:\n",
     "                    mask += bad_pixel_map['map']\n",
     "\n",
+    "            # Locate the planets and mask them out\n",
+    "            planet_poses = planets.locate_planets(image_holder.hdr)\n",
+    "            with warnings.catch_warnings():\n",
+    "                warnings.filterwarnings(action='ignore', message=\".*failed to converge to the requested accuracy.*\")\n",
+    "                warnings.filterwarnings(action='ignore', message=\".*All-NaN slice encountered.*\")\n",
+    "                xs, ys = image_holder.wcs.world_to_pixel(SkyCoord(planet_poses))\n",
+    "            for x, y in zip(xs, ys):\n",
+    "                if np.isnan(x) or np.isnan(y):\n",
+    "                    continue\n",
+    "                x, y = int(x), int(y)\n",
+    "                if 0 <= x < mask.shape[1] and 0 <= y < mask.shape[0]:\n",
+    "                    d = 15\n",
+    "                    left = max(x-d, 0)\n",
+    "                    right = min(x+d, mask.shape[1])\n",
+    "                    bottom = max(y-d, 0)\n",
+    "                    top = min(y+d, mask.shape[0])\n",
+    "                    mask[bottom:top, left:right] = 1\n",
+    "            \n",
+    "            mask = corrector.correct_image(mask.astype(float), alpha=ALPHA, epsilon=EPSILON)\n",
+    "            mask = mask > .1\n",
+    "            corrected_image[mask] = np.nan\n",
+    "\n",
     "            # Clip the edges, where various artifacts occur\n",
-    "            mask[:25] = 1\n",
-    "            mask[:, :55] = 1\n",
-    "            mask[-25:] = 1\n",
-    "            mask[:, -25:] = 1\n",
-    "\n",
-    "            # Detect any mostly-NaN rows or columns and mask them completely\n",
+    "            # And detect any mostly-NaN rows or columns and mask them completely\n",
     "            # (This occurs in some encounters with NaN blocks at top or bottom)\n",
-    "            for j in range(image_holder.image.shape[0]):\n",
-    "                if np.sum(mask[j]) / mask[j].size > .8:\n",
-    "                    mask[j] = 1\n",
-    "            for j in range(image_holder.image.shape[1]):\n",
-    "                if np.sum(mask[:, j]) / mask[:, j].size > .8:\n",
-    "                    mask[:, j] = 1\n",
-    "\n",
-    "            # Replace masked pixels with NaN, which will ensure they don't\n",
-    "            # contribute to the starfield estimation\n",
-    "            image_holder.image[mask] = np.nan\n",
+    "            # N.b. check for zeros in the un-psf-corrected image, as after correction\n",
+    "            # zeros aren't exactly zeros\n",
+    "            left = 25\n",
+    "            while (np.sum(mask[left]) / mask[left].size > .8\n",
+    "                    or np.sum(image[left] == 0) / image.shape[0] > .8):\n",
+    "                left += 1\n",
+    "            \n",
+    "            right = corrected_image.shape[0] - 1 - 45\n",
+    "            while (np.sum(mask[right]) / mask[right].size > .8\n",
+    "                    or np.sum(image[right] == 0) / image.shape[0] > .8):\n",
+    "                right -= 1\n",
+    "            \n",
+    "            corrected_image = corrected_image[left:right+1]\n",
+    "            image_holder.wcs = image_holder.wcs[left:right+1]\n",
+    "            image = image[left:right+1]\n",
+    "            \n",
+    "            bottom = 25\n",
+    "            while (np.sum(mask[:, bottom]) / mask[:, bottom].size > .8\n",
+    "                    or np.sum(image[:, bottom] == 0) / image.shape[1] > .8):\n",
+    "                bottom += 1\n",
+    "            \n",
+    "            top = corrected_image.shape[1] - 1 - 25\n",
+    "            while (np.sum(mask[:, top]) / mask[:, top].size > .8\n",
+    "                    or np.sum(image[:, top] == 0) / image.shape[1] > .8):\n",
+    "                top -= 1\n",
+    "            \n",
+    "            corrected_image = corrected_image[:, bottom:top+1]\n",
+    "            image_holder.wcs = image_holder.wcs[:, bottom:top+1]\n",
+    "        \n",
+    "        image_holder.image = corrected_image\n",
     "        return image_holder\n",
     "        \n",
     "    def postprocess_image(self, processed_image, processed_wcs, image_holder):\n",
