Update example notebook

--- a/remove_starfield_demo.ipynb
+++ b/remove_starfield_demo.ipynb
@@ -10,6 +10,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b29dbf3-ab39-46ad-9a3b-568c0a98e023",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-20T22:15:15.736577Z",
+     "iopub.status.busy": "2024-02-20T22:15:15.736372Z",
+     "iopub.status.idle": "2024-02-20T22:15:15.741380Z",
+     "shell.execute_reply": "2024-02-20T22:15:15.740942Z",
+     "shell.execute_reply.started": "2024-02-20T22:15:15.736558Z"
+    }
+   },
+   "source": [
+    "Again, this notebook **cannot** be run top-to-bottom---this is an outline of a solution, not a complete solution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c92f10b4-4c02-47b9-846b-9ffc430e0d5d",
    "metadata": {},
    "source": [
@@ -32,11 +48,11 @@
    "id": "32358bf5-23ad-404e-82af-83f4b8e01c40",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-14T23:57:36.559269Z",
-     "iopub.status.busy": "2024-02-14T23:57:36.558984Z",
-     "iopub.status.idle": "2024-02-14T23:57:38.450724Z",
-     "shell.execute_reply": "2024-02-14T23:57:38.450248Z",
-     "shell.execute_reply.started": "2024-02-14T23:57:36.559250Z"
+     "iopub.execute_input": "2024-02-17T01:35:06.507149Z",
+     "iopub.status.busy": "2024-02-17T01:35:06.506674Z",
+     "iopub.status.idle": "2024-02-17T01:35:10.404144Z",
+     "shell.execute_reply": "2024-02-17T01:35:10.403305Z",
+     "shell.execute_reply.started": "2024-02-17T01:35:06.507109Z"
     }
    },
    "outputs": [],
@@ -55,6 +71,8 @@
     "import regularizepsf\n",
     "import scipy.ndimage\n",
     "from tqdm.contrib.concurrent import process_map\n",
+    "\n",
+    "# WISPR-specific tools, not included in this package\n",
     "from wispr_analysis import data_cleaning, planets, utils"
    ]
   },
@@ -67,20 +85,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b690ac02-9bf6-4516-8eaa-2aa06bf87844",
+   "metadata": {},
+   "source": [
+    "Here we define an `ImageProcessor` that contains all the instrument-specific logic for loading and preparing WISPR images, and which is designed to support both the \"estimating the starfield\" and \"subtract the starfield\" stages.\n",
+    "\n",
+    "Note again that this depends on WISPR-specific tools, re-processed WISPR files, and other data products, which are not included in this package and are not all currently available publicly. This is just an outline of the steps required for WISPR data, to inspire you to consider implementing similar steps for your data."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d0fa90bb-a93f-4110-9e95-8d882b70eb32",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-14T23:57:38.452058Z",
-     "iopub.status.busy": "2024-02-14T23:57:38.451681Z",
-     "iopub.status.idle": "2024-02-14T23:57:39.703580Z",
-     "shell.execute_reply": "2024-02-14T23:57:39.703011Z",
-     "shell.execute_reply.started": "2024-02-14T23:57:38.452039Z"
-    }
-   },
+   "execution_count": null,
+   "id": "5eb1d638-c507-4a1b-8898-8d53efd711ae",
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# WISPR images are normalized for the Sun--spacecraft distance, and we'll need to be able to undo that for star photometry\n",
     "def denormalize_l3(data, hdr):\n",
     "    data *= (.2 * u.au.to(u.m) / hdr['dsun_obs']) ** 2.3\n",
     "    return data\n",
@@ -88,47 +109,28 @@
     "def renormalize_l3(data, hdr):\n",
     "    data /= (.2 * u.au.to(u.m) / hdr['dsun_obs']) ** 2.3\n",
     "    return data\n",
+    "\n",
+    "# These are for regularizing the WISPR PSF throughout the image plane and across the two detectors.\n",
     "array_corrector_i = regularizepsf.corrector.ArrayCorrector.load('psf-inner.psf')\n",
     "array_corrector_o = regularizepsf.corrector.ArrayCorrector.load('psf-outer.psf')\n",
     "ALPHA = 6\n",
-    "EPSILON = .2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b690ac02-9bf6-4516-8eaa-2aa06bf87844",
-   "metadata": {},
-   "source": [
-    "Here we define an `ImageProcessor` that contains all the instrument-specific logic for loading and preparing WISPR images, and which is designed to support both the \"estimating the starfield\" and \"subtract the starfield\" stages."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "5eb1d638-c507-4a1b-8898-8d53efd711ae",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-14T23:57:39.704714Z",
-     "iopub.status.busy": "2024-02-14T23:57:39.704489Z",
-     "iopub.status.idle": "2024-02-14T23:57:39.712949Z",
-     "shell.execute_reply": "2024-02-14T23:57:39.712587Z",
-     "shell.execute_reply.started": "2024-02-14T23:57:39.704697Z"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "EPSILON = .2\n",
+    "\n",
     "class WISPRImageProcessor(remove_starfield.ImageProcessor):\n",
     "    def __init__(self, mask=True, denormalize_input=False, renormalize_starfield=False, IO='I'):\n",
     "        # Whether to apply a mask (replacing masked pixels with NaNs)\n",
     "        self.mask = mask\n",
     "        # Whether to undo the normalization for Sun--PSP disance\n",
     "        self.denormalize_input = denormalize_input\n",
-    "        # Whether starfield samples should receive a Sun--PSP distance normalization, so they can be subtracted from images that haven't been denormalized\n",
+    "        # Whether starfield samples should receive a Sun--PSP distance normalization,\n",
+    "        # so they can be subtracted from images that haven't been denormalized\n",
     "        self.renormalize_starfield = renormalize_starfield\n",
     "        # Whether we're working with the inner or outer detector\n",
     "        self.IO = IO\n",
     "    \n",
     "    def load_image(self, filename):\n",
+    "        # This is pretty standard for WISPR---we just load the data, extract the correct WCS,\n",
+    "        # and store some metadata for later\n",
     "        with utils.ignore_fits_warnings(), fits.open(filename) as hdul:\n",
     "            hdu = 1 if hdul[0].data is None else 0\n",
     "            hdr = hdul[hdu].header\n",
@@ -160,9 +162,9 @@
     "            E = utils.extract_encounter_number(image_holder.filename)\n",
     "            mask_dir = f'/home/svankooten/psp/WISPR/debris_masks/E{E} masks'\n",
     "            mask = data_cleaning.find_mask(mask_dir, image_holder.filename)\n",
-    "            \n",
     "            mask = fits.getdata(mask).astype(bool)\n",
     "\n",
+    "            # Re-apply this mask from the PSF regularization stage\n",
     "            mask += nans\n",
     "\n",
     "            if self.IO == 'I':\n",
@@ -187,14 +189,18 @@
     "                    bottom = max(y-d, 0)\n",
     "                    top = min(y+d, mask.shape[0])\n",
     "                    mask[bottom:top, left:right] = 1\n",
-    "            \n",
+    "\n",
+    "            # For the debris streaks and bad pixels, the PSF regularization spreads the\n",
+    "            # impact to nearby pixels, so we must spread the mask as well.\n",
     "            mask = corrector.correct_image(mask.astype(float), alpha=ALPHA, epsilon=EPSILON)\n",
     "            mask = mask > .1\n",
+    "\n",
+    "            # Finally, apply the mask to the image, by setting masked pixels to NaN.\n",
     "            corrected_image[mask] = np.nan\n",
     "\n",
-    "            # Clip the edges, where various artifacts occur\n",
-    "            # And detect any mostly-NaN rows or columns and mask them completely\n",
-    "            # (This occurs in some encounters with NaN blocks at top or bottom)\n",
+    "            # Clip the edges, where various artifacts occur,\n",
+    "            # and detect any mostly-NaN or mostly-zero rows or columns and mask them completely.\n",
+    "            # (This occurs in some encounters with big blocks at top or bottom)\n",
     "            # N.b. check for zeros in the un-psf-corrected image, as after correction\n",
     "            # zeros aren't exactly zeros\n",
     "            left = 25\n",
@@ -228,23 +234,6 @@
     "        return image_holder\n",
     "        \n",
     "    def postprocess_image(self, processed_image, processed_wcs, image_holder):\n",
-    "        \"\"\"\n",
-    "        Processes an image array after it is reprojected, before being stacked\n",
-    "\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        image : ``np.ndarray``\n",
-    "            The image array\n",
-    "        wcs : ``WCS``\n",
-    "            The WCS describing the image data\n",
-    "        filename : ``str``\n",
-    "            The file path the image was loaded from\n",
-    "\n",
-    "        Returns\n",
-    "        -------\n",
-    "        image : ``np.ndarray``\n",
-    "            The processed image array\n",
-    "        \"\"\"\n",
     "        # Largely-negative values in an input image likely indicate a region where\n",
     "        # the background has been oversubtracted. Negative values very close to\n",
     "        # zero are likely statstically-zero pixels which the noise tipped negative\n",
@@ -308,7 +297,7 @@
     "ifiles = []\n",
     "ofiles = []\n",
     "for E in range(4, 15):\n",
-    "    files = utils.collect_files(f'/home/svankooten/psp/WISPR/basic_filter_for_stars_linear_fit/WISPR_ENC{E:02d}_L3_FITS/')\n",
+    "    files = utils.collect_files(f'/home/svankooten/psp/WISPR/prefiltered_images/WISPR_ENC{E:02d}_L3_FITS/')\n",
     "    # Inner WISPR imager\n",
     "    ifiles.extend(files[0])\n",
     "    # Outer WISPR imager\n",
@@ -316,7 +305,7 @@
     "\n",
     "starfield = remove_starfield.build_starfield_estimate(\n",
     "    ifiles, attribution=True, frame_count=True,\n",
-    "    dec_bounds=(-50, 40), processor=WISPRImageProcessor())"
+    "    dec_bounds=(-50, 40), processor=WISPRImageProcessor(), target_mem_usage=20)"
    ]
   },
   {
@@ -711,33 +700,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "dbc2d958-1315-4998-85d5-13d78e40af7f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-14T23:58:38.709183Z",
-     "iopub.status.busy": "2024-02-14T23:58:38.708630Z",
-     "iopub.status.idle": "2024-02-15T00:01:36.983884Z",
-     "shell.execute_reply": "2024-02-15T00:01:36.983385Z",
-     "shell.execute_reply.started": "2024-02-14T23:58:38.709160Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00e075483ff5416bb250b400eb2456e7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/241 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def extract_from_file(file, starfield):\n",
     "    subtracted_image = starfield.subtract_from_image(file, WISPRImageProcessor(mask=False, denormalize_input=True))\n",
