--- a/remove_starfield_demo.ipynb
+++ b/remove_starfield_demo.ipynb
@@ -136,19 +136,18 @@
     "            hdr = hdul[hdu].header\n",
     "            wcs = WCS(hdr, hdul, key='A')\n",
     "            data = hdul[hdu].data\n",
-    "        holder = remove_starfield.ImageHolder(data, wcs)\n",
+    "        holder = remove_starfield.ImageHolder(data, wcs, hdr)\n",
     "        # Stash this data for later stages\n",
-    "        holder.hdr = hdr\n",
     "        holder.filename = filename\n",
     "        return holder\n",
     "        \n",
     "    def preprocess_image(self, image_holder):\n",
-    "        image = image_holder.image\n",
+    "        image = image_holder.data\n",
     "        # Undo the L3s' normalization for s/c distance\n",
     "        # (Already done in pre-filter stage, but needed for the\n",
     "        # more pristine images from which we'll subtract the starfield)\n",
     "        if self.denormalize_input:\n",
-    "            denormalize_l3(image, image_holder.hdr)\n",
+    "            denormalize_l3(image, image_holder.meta)\n",
     "\n",
     "        # Apply a PSF correction\n",
     "        corrector = array_corrector_i if self.IO == 'I' else array_corrector_o\n",
@@ -173,7 +172,7 @@
     "                    mask += bad_pixel_map['map']\n",
     "\n",
     "            # Locate the planets and mask them out\n",
-    "            planet_poses = planets.locate_planets(image_holder.hdr)\n",
+    "            planet_poses = planets.locate_planets(image_holder.meta)\n",
     "            with warnings.catch_warnings():\n",
     "                warnings.filterwarnings(action='ignore', message=\".*failed to converge to the requested accuracy.*\")\n",
     "                warnings.filterwarnings(action='ignore', message=\".*All-NaN slice encountered.*\")\n",
@@ -230,7 +229,7 @@
     "            corrected_image = corrected_image[:, bottom:top+1]\n",
     "            image_holder.wcs = image_holder.wcs[:, bottom:top+1]\n",
     "        \n",
-    "        image_holder.image = corrected_image\n",
+    "        image_holder.data = corrected_image\n",
     "        return image_holder\n",
     "        \n",
     "    def postprocess_image(self, processed_image, processed_wcs, image_holder):\n",
@@ -253,7 +252,7 @@
     "        if self.renormalize_starfield:\n",
     "            # If we don't want to denormalize the image we're subtracting stars from,\n",
     "            # we'll have to normalize the starfield to match\n",
-    "            renormalize_l3(starfield_estimate, input_image_holder.hdr)\n",
+    "            renormalize_l3(starfield_estimate, input_image_holder.meta)\n",
     "        return starfield_estimate"
    ]
   },
@@ -1020,7 +1019,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
